Fixed z-index issue

--- a/style.css
+++ b/style.css
@@ -272,7 +272,7 @@ body {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   padding: 8px 12px;
-  z-index: 1;
+  z-index: 2;
 }
 #dropdown-content > * {
   padding: 1vw;
